2021-04-09  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/findjournals (clean_review_string):
	Added ' Nr' to the cleaning features.

2021-03-20  Jim Fowler  <jrf@biblion>

	* Docs/Journals/skytel_table.py: Added missing dictionary
	to indicate which issues are not in my collection.  Added
	print_month() function to print missing issues differently
	than issues I have.

2021-03-13  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (main): commented out test for
	Tafeln and 'translation of'.

2021-03-07  Jim Fowler  <jrf@biblion>

	* Docs/Series/springer_assl_table.py (assl_print_books): Added
	AJB/AAA numbers to entries. Had to modify the read function
	to allow additional fields in the entry list.

2021-02-26  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/journal/jsearch.py
	(JournalSearch.search_edit_changed): Changed to utlize
	the package fast_autosearch instead of my search.py.

	* Tools/python/aabooks/journal/journalwindow.py
	(JournalWindow._build_search_dictionary): Changed to utilize
	the package fast_autosearch instead of my search.py.

2021-02-03  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/adsquery: Began work on script to query
	books from the Astrophysical Data System.

2021-01-30  Jim Fowler  <jrf@biblion>

	* Tools/python/aabooks/ajbbook/entryxml.py (entry_xml_keywords):
	Modified function to work properly with list object

2021-01-29  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert (parse_keywords): Changed
	entry['keywords'] to entry['Keywords']

2021-01-28  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/aaaconvert: Extend suffix in parsing
	the AAA number from a-c to a-z.

2021-01-24  Jim Fowler  <jrf@biblion>

	* Tools/python/scripts/verify (getargs): Added command line flags
	to turn off each test.  Reenabled test for 'translation of' in the
	comments.
	(main): Added test and flag for 'Tafeln'.  Made seperate test
	functions to satisfy pylint.

2021-01-19  Jim Fowler  <jrf@biblion>
